# spectacular

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.agents/skills/agent-skill-authoring/: SKILL.md
.agents/skills/agent-skill-authoring/references/: agent-skills-spec.md  gpt-5.5-optimizations.md
.agents/skills/coding-conventions/: SKILL.md
.agents/skills/coding-conventions/references/: architecture-principles.md  file-size-limits.md  implementation-standards.md  method-documentation.md  module-depth.md  monodon-rust.md  nxlv-python.md  test-location.md
.agents/skills/discuss/: SKILL.md
.agents/skills/iocraft/: SKILL.md
.agents/skills/iocraft/references/: iocraft-guide.md
.agents/skills/project-index/: SKILL.md
.github/workflows/: ci.yml
