[workspace]
resolver = "2"
members = [
    "packages/spectacular",
    "packages/spectacular-agent",
    "packages/spectacular-commands",
    "packages/spectacular-llms",
    "packages/spectacular-config",
    "packages/spectacular-plan",
    "packages/spectacular-tools",
]

[profile.release]
lto = true
